--- a/public/index.html
+++ b/public/index.html
@@ -156,15 +156,19 @@
               </div>
             </div>
             <div id="batteryVoltage" class="datum cell small-2 small-offset-8 center">
-              <div id="batteryVoltageDisp" class="module center">
+              <div id="batteryVoltageDisp" class="module center" style="
+              width: 13vw;">
                 <div class="labels">
-                  <text>Voltage: </text>
-                  <text>Bluetooth: </text>
+                  <text>Hull Battery:</text>
+                  <text>Hull Status:</text>
+                  <text>Bluetooth:</text>
+                  <text>Trim Battery:</text>
                 </div>
                 <div class="values">
                   <text id="voltage">14.8 V</text>
-                   
+                  <text id="hull-status">Battery Low.</text>
                   <text id="btstatus">OK</text>
+                  <text id="trimtab-voltage">5.0 V</text>
                    
                 </div>
               </div>
