--- a/public/sim.html
+++ b/public/sim.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Sailbot Dashboard</title>
+  <title>Sailbot Dashboard Simulator</title>
   <meta name="description" content="Recieves and Displays data from WPI Sailbot">
   <meta name="author" content="Sailbot Team 20-21">
 </head>
