--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="stylesheet" href="css/simple-grid.min.css">
   <link rel="stylesheet" href="css/foundation.css">
-  <link rel="shortcut icon" href="../public/assets/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="../public/assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -138,9 +138,9 @@
                   <text>Psi:</text>
                 </div>
                 <div class="values">
-                  <text id="phi">420.69</text>
-                  <text id="theta">420</text>
-                  <text id="psi">-420.69</text>
+                  <text id="phi">0.1</text>
+                  <text id="theta">0.1</text>
+                  <text id="psi">0.1</text>
                 </div>
               </div>
               <h6 id="gyroTitle" class="font-heavy">Rate Gyro</h6>
@@ -160,15 +160,13 @@
               width: 13vw;">
                 <div class="labels">
                   <text>Hull Battery:</text>
-                  <text>Hull Status:</text>
                   <text>Bluetooth:</text>
                   <text>Trim Battery:</text>
                 </div>
                 <div class="values">
-                  <text id="voltage">14.8 V</text>
-                  <text id="hull-status">Battery Low.</text>
+                  <text id="hullBatteryState">14.8 V</text>
                   <text id="btstatus">OK</text>
-                  <text id="trimtab-voltage">5.0 V</text>
+                  <text id="trimtab-voltage-percentage">99%</text>
                    
                 </div>
               </div>
